--- a/k8s-gatekeeper/helm-gatekeeper-constraints/templates/containerrequestsConstraints.yaml
+++ b/k8s-gatekeeper/helm-gatekeeper-constraints/templates/containerrequestsConstraints.yaml
@@ -1,11 +1,13 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
-kind: K8sAlwaysDeny
+kind: K8sContainerRequests
 metadata:
-  name: pod-always-deny
+  name: container-must-have-requests
 spec:
   match:
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
   parameters:
-    message: "You are restricted to Create Pods"
+    cpu: "200m"
+    memory: "1Gi"
+
