--- a/k8s-gatekeeper/helm-gatekeeper-templates/templates/k8sallowedrepos.yaml
+++ b/k8s-gatekeeper/helm-gatekeeper-templates/templates/k8sallowedrepos.yaml
@@ -1,23 +1,49 @@
-apiVersion: templates.gatekeeper.sh/v1beta1
+apiVersion: templates.gatekeeper.sh/v1
 kind: ConstraintTemplate
 metadata:
-  name: k8salwaysdeny
+  name: k8sallowedrepos
+  annotations:
+    metadata.gatekeeper.sh/title: "Allowed Repositories"
+    metadata.gatekeeper.sh/version: 1.0.0
+    description: >-
+      Requires container images to begin with a string from the specified list.
 spec:
   crd:
     spec:
       names:
-        kind: K8sAlwaysDeny
+        kind: K8sAllowedRepos
       validation:
-        # Schema for the 'parameters' field
+        # Schema for the `parameters` field
         openAPIV3Schema:
+          type: object
           properties:
-            message:
-              type: string
+            repos:
+              description: The list of prefixes a container image is allowed to have.
+              type: array
+              items:
+                type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package k8salwaysdeny
+        package k8sallowedrepos
+
         violation[{"msg": msg}] {
-          1 > 0
-          msg := input.parameters.message
+          container := input.review.object.spec.containers[_]
+          satisfied := [good | repo = input.parameters.repos[_] ; good = startswith(container.image, repo)]
+          not any(satisfied)
+          msg := sprintf("container <%v> has an invalid image repo <%v>, allowed repos are %v", [container.name, container.image, input.parameters.repos])
+        }
+
+        violation[{"msg": msg}] {
+          container := input.review.object.spec.initContainers[_]
+          satisfied := [good | repo = input.parameters.repos[_] ; good = startswith(container.image, repo)]
+          not any(satisfied)
+          msg := sprintf("initContainer <%v> has an invalid image repo <%v>, allowed repos are %v", [container.name, container.image, input.parameters.repos])
+        }
+
+        violation[{"msg": msg}] {
+          container := input.review.object.spec.ephemeralContainers[_]
+          satisfied := [good | repo = input.parameters.repos[_] ; good = startswith(container.image, repo)]
+          not any(satisfied)
+          msg := sprintf("ephemeralContainer <%v> has an invalid image repo <%v>, allowed repos are %v", [container.name, container.image, input.parameters.repos])
         }
