--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,7 +2,7 @@ name: Deploy Infrastructure
 
 on:
   push:
-    branches: [main]
+    branches: [xyz]
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
