--- a/k8s-gatekeeper/mainfest/bad_pod_limit.yaml
+++ b/k8s-gatekeeper/mainfest/bad_pod_limit.yaml
@@ -1,12 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: limit-violating-pod
+  name: opa-disallowed
 spec:
-  match:
-    kinds:
-      - apiGroups: [""]
-        kinds: ["Pod"]
-  parameters:
-    cpu: "205m"
-    memory: "2Gi"
+  containers:
+    - name: opa
+      image: openpolicyagent/opa:0.9.2
+      args:
+        - "run"
+        - "--server"
+        - "--addr=localhost:8080"
+      resources:
+        limits:
+          cpu: "100m"
+          memory: "2Gi"
