--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -11,5 +11,34 @@ jobs:
     - uses: actions/checkout@v2
     - name: Start minikube
       uses: medyagh/setup-minikube@master
-    - name: Try the cluster !
-      run: kubectl get pods -A
+
+  job3_deploy_opa_gatekeeper:
+
+    name: OPA gatekeeper
+    runs-on: ubuntu-latest
+    #needs: job2_connect_to_eks
+    defaults:
+      run:
+        working-directory: ./k8s-gatekeeper
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: false
+      
+      - name: Terraform Apply
+        timeout-minutes: 30
+        id: apply
+        run: terraform apply -auto-approve
