update workflow to check pods

--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -31,3 +31,7 @@ jobs:
       timeout-minutes: 30
       id: apply
       run: terraform apply -auto-approve
+
+    - name: check pods
+      run: |
+        kubectl get pods -n gatekeeper-system
