update workflow to list templates and constraints

--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -35,3 +35,9 @@ jobs:
     - name: check pods
       run: |
         kubectl get pods -n gatekeeper-system
+    - name: list contrainttemplates
+      run: |
+        kubectl get ConstraintTemplate
+    - name: list constraints
+      run: |
+        kubectl get constraints
