--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -42,9 +42,11 @@ jobs:
       run: |
         kubectl get constraints
     - name: Verify limit policy bad example
+      if: always()
       run: |
         kubectl apply -f ./mainfest/bad_pod_limit.yaml
 
     - name: Verify allowed repo policy bad example
+      if: always()
       run: |
         kubectl apply -f ./mainfest/bad_allowed_repo.yaml
