--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./k8s-gatekeeper
+        working-directory: ./
     steps:
     - uses: actions/checkout@v3
     - uses: hashicorp/setup-terraform@v2
@@ -31,22 +31,26 @@ jobs:
       timeout-minutes: 30
       id: apply
       run: terraform apply -auto-approve
+    
+    - name: check namespace
+      run: |
+        kubectl get namespace
 
-    - name: check pods
-      run: |
-        kubectl get pods -n gatekeeper-system
-    - name: list contrainttemplates
-      run: |
-        kubectl get ConstraintTemplate
-    - name: list constraints
-      run: |
-        kubectl get constraints
-    - name: Verify limit policy bad example
-      if: always()
-      run: |
-        kubectl apply -f ./mainfest/bad_pod_limit.yaml
+    # - name: check pods
+    #   run: |
+    #     kubectl get pods -n gatekeeper-system
+    # - name: list contrainttemplates
+    #   run: |
+    #     kubectl get ConstraintTemplate
+    # - name: list constraints
+    #   run: |
+    #     kubectl get constraints
+    # - name: Verify limit policy bad example
+    #   if: always()
+    #   run: |
+    #     kubectl apply -f ./mainfest/bad_pod_limit.yaml
 
-    - name: Verify allowed repo policy bad example
-      if: always()
-      run: |
-        kubectl apply -f ./mainfest/bad_allowed_repo.yaml
+    # - name: Verify allowed repo policy bad example
+    #   if: always()
+    #   run: |
+    #     kubectl apply -f ./mainfest/bad_allowed_repo.yaml
