--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./
+        working-directory: ./gatekeeper_terraform
     steps:
     - uses: actions/checkout@v3
     - uses: hashicorp/setup-terraform@v2
