--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -6,9 +6,9 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./gatekeeper_terraform
+    # defaults:
+    #   run:
+    #     working-directory: ./
     steps:
     - uses: actions/checkout@v3
     - uses: hashicorp/setup-terraform@v2
