--- a/modules/resources/namespace/values.yaml
+++ b/modules/resources/namespace/values.yaml
@@ -1,2 +1,2 @@
-name_namespace: feature_namespace
-lable_namespace: demo_of_namespace
+name_namespace: feature-namespace
+lable_namespace: demo-namespace
