adding resource quota updated namespace

--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -38,7 +38,7 @@ jobs:
     
     - name: check resource quota
       run: |
-        kubectl describe quota
+        kubectl describe quota --namespace feature-namespace
 
       
 
