--- a/modules/resources/namespace/templates/cluster_role.yaml
+++ b/modules/resources/namespace/templates/cluster_role.yaml
@@ -1,3 +1,17 @@
+#cluster role to grant read access to secrets across all ns
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  # "namespace" omitted since ClusterRoles are not namespaced
+  name: secret-reader
+rules:
+- apiGroups: [""]
+  #
+  # at the HTTP level, the name of the resource for accessing Secret
+  # objects is "secrets"
+  resources: ["secrets"]
+  verbs: ["get", "watch", "list"]
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -11,17 +25,3 @@ rules:
   verbs: ["bind"]
   # omit resourceNames to allow binding any ClusterRole
   resourceNames: ["admin","edit","view"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: role-grantor-binding
-  namespace: {{.Values.name_namespace}}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: role-grantor
-subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: user-1
