--- a/modules/namespace/helm-namespace/templates/namespace.yaml
+++ b/modules/namespace/helm-namespace/templates/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Values.name_namespace}}
+  name: {{ $name_namespace}}
   labels:
     name: {{.Values.label_namespace}}
