--- a/modules/namespace/helm-namespace/templates/namespace.yaml
+++ b/modules/namespace/helm-namespace/templates/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "${name_namespace}"
+  name: "${name-namespace}"
   labels:
-    name: "${lable_namespace}"
+    name: "${lable-namespace}"
