--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color
+      run: terraform plan -var-file="terraform.tfvars" -no-color
       continue-on-error: false
       
     - name: Terraform Apply
