--- a/modules/namespace/helm-namespace/templates/namespace.yaml
+++ b/modules/namespace/helm-namespace/templates/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: "${name-namespace}"
-  labels:
-    name: "${lable-namespace}"
+  # labels:
+  #   name: "${lable-namespace}"
