--- a/modules/namespace/helm-namespace/templates/namespace.yaml
+++ b/modules/namespace/helm-namespace/templates/namespace.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ .Values.name_namespace}}
+    labels:
+      name: {{ .Values.label_namespace}}
