--- a/modules/liveness/helm-liveness/templates/liveliness.yaml
+++ b/modules/liveness/helm-liveness/templates/liveliness.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  labels:
-    test: liveness
-  name: liveness-exec
+  name: nginx
 spec:
   containers:
-  - name: liveness
-    image: registry.k8s.io/busybox
+  - name: nginx
+    image: nginx:1.14.2
+    ports:
+    - containerPort: 80
     args:
     - /bin/sh
     - -c
