--- a/modules/liveness/helm-liveness/templates/liveliness.yaml
+++ b/modules/liveness/helm-liveness/templates/liveliness.yaml
@@ -19,3 +19,10 @@ spec:
         - /tmp/healthy
       initialDelaySeconds: 5
       periodSeconds: 5
+    readinessProbe:
+      exec:
+        command:
+        - cat
+        - /tmp/healthy
+      initialDelaySeconds: 5
+      periodSeconds: 5
