--- a/modules/liveness/helm-liveness/templates/liveliness.yaml
+++ b/modules/liveness/helm-liveness/templates/liveliness.yaml
@@ -22,3 +22,11 @@ spec:
         - /tmp/healthy
       initialDelaySeconds: 5
       periodSeconds: 5
+
+    startupProbe:
+      exec:
+        command:
+        - cat
+        - /tmp/healthy
+      failureThreshold: 30
+      periodSeconds: 10
