--- a/modules/liveness/helm-liveness/templates/liveliness.yaml
+++ b/modules/liveness/helm-liveness/templates/liveliness.yaml
@@ -8,6 +8,10 @@ spec:
     image: nginx:1.14.2
     ports:
     - containerPort: 80
+    args:
+    - /bin/sh
+    - -c
+    - touch /tmp/healthy; sleep 30;
     livenessProbe:
       exec:
         command:
