--- a/modules/liveness/helm-liveness/templates/liveliness.yaml
+++ b/modules/liveness/helm-liveness/templates/liveliness.yaml
@@ -8,28 +8,28 @@ spec:
     image: nginx:1.14.2
     ports:
     - containerPort: 80
-    args:
-    - /bin/sh
-    - -c
-    - touch /tmp/healthy; sleep 30;
-    livenessProbe:
-      exec:
-        command:
-        - cat
-        - /tmp/healthy
-      initialDelaySeconds: 5
-      periodSeconds: 5
-    readinessProbe:
-      exec:
-        command:
-        - cat
-        - /tmp/healthy
-      initialDelaySeconds: 5
-      periodSeconds: 5
-    startupProbe:
-      exec:
-        command:
-        - cat
-        - /tmp/healthy
-      failureThreshold: 30
-      periodSeconds: 10
+    # args:
+    # - /bin/sh
+    # - -c
+    # - touch /tmp/healthy; sleep 30;
+    # livenessProbe:
+    #   exec:
+    #     command:
+    #     - cat
+    #     - /tmp/healthy
+    #   initialDelaySeconds: 5
+    #   periodSeconds: 5
+    # readinessProbe:
+    #   exec:
+    #     command:
+    #     - cat
+    #     - /tmp/healthy
+    #   initialDelaySeconds: 5
+    #   periodSeconds: 5
+    # startupProbe:
+    #   exec:
+    #     command:
+    #     - cat
+    #     - /tmp/healthy
+    #   failureThreshold: 30
+    #   periodSeconds: 10
