adding clusterrole module

--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -52,6 +52,9 @@ jobs:
     - name: check quota
       run: |
         kubectl get quota
+    - name: check cluster role
+      run: |
+        kubectl get clusterroles
 
 
 
