--- a/.github/workflows/gatekeeper.yaml
+++ b/.github/workflows/gatekeeper.yaml
@@ -55,6 +55,10 @@ jobs:
     - name: check cluster role
       run: |
         kubectl get clusterroles
+            - name: Run Terratest
+          uses: cloudposse/github-action-terratest@main
+          with:
+            sourceDir: test
 
 
 
