--- a/modules/quotas/helm-quota/values.yaml
+++ b/modules/quotas/helm-quota/values.yaml
@@ -1,12 +1,12 @@
-request_cpu: 2
-requests_memory: 2Gi
-cpu_limit: 2
-memory_limit: 2Gi
-request_gpu: 4
-configmaps_quota: 10
-persistentvolumeclaims: 4
-pods: 10
-replicationcontrollers: 20
-secrets: 10
-services:  10
-services_loadbalancers: 2
+request_cpu: "2"
+requests_memory: "1Gi"
+cpu_limit: "2"
+memory_limit: "1Gi"
+request_gpu: "4"
+configmaps_quota: "10"
+persistentvolumeclaims: "4"
+pods: "10"
+replicationcontrollers: "20"
+secrets: "10"
+services:  "10"
+services_loadbalancers: "2"
